--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ server.port=8080
 # Configurações de upload de arquivo
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Configurações do Auth Server
+auth.server.url=http://localhost:8082/auth-server
+auth.server.client.id=teste
+auth.server.client.secret=123456
